[metadata]
name = cosimpy
version = 3.0.1.1
author = Umberto Zanovello
author_email = umbertozanovello@hotmail.com
description = Python electromagnetic co-simulation library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://umbertozanovello.github.io/CoSimPy/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5
install_requires =
	numpy >=1.15.2
	matplotlib >=3.0.0
	h5py >=2.8.0
	scipy >=1.1.0

[options.packages.find]
where = src
