[metadata]
name = cosimpy
version = 1.5.0
author = Umberto Zanovello
author_email = umbertozanovello@hotmail.com
description = Python electromagnetic co-simulation library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://umbertozanovello.github.io/CoSimPy/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5
install_requires =
	numpy >=2.0.0
	matplotlib >=3.9.0
	h5py >=3.11.0
	scipy >=1.14.0

[options.packages.find]
where = src
